--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Cole's Homepage
 <body style="background-color:red">
 <h1 style="color:lightblue">This is my homepage. Click one of the links to see my websites.
 </h1>
-<h2 style="color:darkblue">(Happy Faces(<a href="url"></a>))
+<h2 style="color:darkblue">(Happy Faces(<a href="http://swag0.github.io/Happyfaces.html"></a>))
 </h2>
 </body>
 </html>
