--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -6,5 +6,6 @@
 </h1>
 <img src = "http://piq.codeus.net/static/media/userpics/piq_180246_400x400.png"><img src = "http://img1.wikia.nocookie.net/__cb20120412051836/suburgatory/images/5/52/Happy_face.jpg">
 <img src = "http://i.ebayimg.com/images/i/290564811066-0-1/s-l1000.jpg">
+<img src = "http://ak-hdl.buzzfed.com/static/enhanced/webdr06/2013/6/13/14/anigif_enhanced-buzz-22067-1371148703-12.gif">
 </body>
 </html>
