Finish rough copy

--- a/green.html
+++ b/green.html
@@ -2,4 +2,8 @@
 <head><title>Vote for green
 </title></head>
 <body style ="background color:dark green">
-<h1 style="color=lime green">Vote for green. Vote for a better future.
+<h1 style="color=lime green">Vote for green. Vote for a better future.http://www.greenparty.ca/en/platform
+</h1>
+</body>
+</html>
+
