--- a/green.html
+++ b/green.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Vote for green
 </title></head>
-<body style ="background color:dark green">
-<h1 style="color=lime green">Vote for green. Vote for a better future.http://www.greenparty.ca/en/platform
+<body style="background color:dark green">
+<h1 style="color:lime green">Vote for green. Vote for a better future.
 </h1>
 </body>
 </html>
