--- a/green.html
+++ b/green.html
@@ -2,7 +2,13 @@
 <head><title>Vote for green
 </title></head>
 <body style="background color:dark green">
-<h1 style="color:lime green">Vote for green. Vote for a better future.
+<h1 style="color:lime green">We will...
+Lower hot lunch prices 
+Let you bring your pet to school once per term.
+Make class parties will be every Friday
+We will have more field trips.
+We will welcome more schools for sport meets.
+Get better technology
 </h1>
 </body>
 </html>
