--- a/green.html
+++ b/green.html
@@ -1,14 +1,13 @@
 <html>
 <head><title>Vote for green
-</title></head>
-<body style="background color:dark green">
-<h1 style="color:lime green">We will...
-Lower hot lunch prices 
+<body style="background-color:purple">
+<h1 style="color:lime green"> We will...
+Lower hot lunch prices.
 Let you bring your pet to school once per term.
-Make class parties will be every Friday
-We will have more field trips.
+Make class parties will be every Friday.
+We will have more field trips..
 We will welcome more schools for sport meets.
-Get better technology
+Get better technology.
 </h1>
 </body>
 </html>
