--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -8,5 +8,9 @@
 <img src = "http://i.ebayimg.com/images/i/290564811066-0-1/s-l1000.jpg">
 <img src = "http://ak-hdl.buzzfed.com/static/enhanced/webdr06/2013/6/13/14/anigif_enhanced-buzz-22067-1371148703-12.gif">
 <img src = https://kbunge.files.wordpress.com/2013/02/lotsa-smiley-faces1.jpg¨
+<img src="http://i.ytimg.com/vi/ReF6iQ7M5_A/maxresdefault.jpg">
+<img src="http://orig07.deviantart.net/2c43/f/2011/031/d/c/very_happy_face_by_zero78o-d38iw7i.jpg">
+<img src="">
+<img src="">
 </body>
 </html>
