add a ton of pics
boss elephant seal

--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -10,7 +10,10 @@
 <img src = https://kbunge.files.wordpress.com/2013/02/lotsa-smiley-faces1.jpg¨
 <img src="http://i.ytimg.com/vi/ReF6iQ7M5_A/maxresdefault.jpg">
 <img src="http://orig07.deviantart.net/2c43/f/2011/031/d/c/very_happy_face_by_zero78o-d38iw7i.jpg">
-<img src="">
-<img src="">
+<img src="http://images.fineartamerica.com/images/artworkimages/mediumlarge/1/happy-face-and-bread-blink-images.jpg">
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/34/AlthepalHappyface.svg/256px-AlthepalHappyface.svg.png">
+<img src="http://rs288.pbsrc.com/albums/ll198/14133/repeatingsmiley.gif~c200">
+<img src="http://stream1.gifsoup.com/view1/1322376/elephant-seals-fight-o.gif"
+<img src="https://s-media-cache-ak0.pinimg.com/originals/88/3d/d3/883dd31c9d60c837add248b0eebf09e9.gif"
 </body>
 </html>
