--- a/patrick.html
+++ b/patrick.html
@@ -2,7 +2,7 @@
 <head><title>Patrick
 </title></head>
 <body style="background-color:aquamarine">
-<h1 style="color:blue">Patricks moments.
+<h1 style="color:blue">Patrick's Moments
 </h1>
 <img src="http://media.giphy.com/media/TdfyKrN7HGTIY/giphy.gif">
 <img src="http://media.giphy.com/media/13k4VSc3ngLPUY/giphy.gif">
