--- a/mario.html
+++ b/mario.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Happy Faces
+<head><title>Mario
 </title></head>
 <body style="background-color:Red">
 <h1 style="color:Blue">Mario's Moments
