--- a/Mario.html
+++ b/Mario.html
@@ -10,5 +10,6 @@
 <img src="https://media.giphy.com/media/12QMzVeF4QsqTC/giphy.gif">
 <img src="http://images6.fanpop.com/image/photos/37700000/Mario-Head-Gif-mario-37744042-320-240.gif">
 <img src="http://media.giphy.com/media/x2woMnCz4W0Vy/giphy.gif">
+<img src="http://orig06.deviantart.net/2b6f/f/2009/083/9/f/mario_throwing_a_fire_ball_by_shadowsmasher.gif">
 </body>
 </html>
