--- a/Cole.html
+++ b/Cole.html
@@ -2,9 +2,9 @@
 <head><title>Cole's Homepage
 </title></head>
 <body style="background-color:Red">
-<h1 style="color:Blue">This is my homepage.
-<a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>
-<a href="http://swag0.github.io/patrick.html">Patrick</a>
+<h1 style="color:Blue">This is my homepage. These our my webpages.
+Check out <a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>
+Check out <a href="http://swag0.github.io/patrick.html">Patrick</a>
 </h1>
 </body>
 </html>
