--- a/Cole.html
+++ b/Cole.html
@@ -4,7 +4,7 @@
 <body style="background-color:Red">
 <h1 style="color:Blue">This is my homepage. These our my webpages.
 Check out <a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>.
-Check out <a href="http://swag0.github.io/patrick.html">Patrick</a>.
+Check out <a href="http://swag0.github.io/patrick.html">Patrick's Moments</a>.
 </h1>
 </body>
 </html>
