--- a/patrick.html
+++ b/patrick.html
@@ -23,5 +23,6 @@
 <img src="http://i.imgur.com/2ObWPxf.gif">
 <img src="http://38.media.tumblr.com/78253823a0b3c08ecaa30b52e6167a97/tumblr_mgoq17JObw1r95jvyo1_500.gif">
 <img src="http://38.media.tumblr.com/tumblr_lqxqyeIPmX1r2yympo1_500.gif">
+<img src="http://stream1.gifsoup.com/view2/20151011/5257648/patrick-o.gif"
 </body>
 </html>
