--- a/Cole.html
+++ b/Cole.html
@@ -4,7 +4,7 @@
 <body style="background-color:Red">
 <h1 style="color:Blue">This is my homepage. These our my webpages.
 Check out <a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>.
-Check out all of <a href="http://swag0.github.io/spongebob&friends.html">Spongebob's Adventures</a>.
+Don't forget to check out all of <a href="http://swag0.github.io/spongebob&friends.html">Spongebob's Adventures</a>.
 </h1>
 </body>
 </html>
