try out pic instead of text

--- a/Cole.html
+++ b/Cole.html
@@ -3,7 +3,7 @@
 </title></head>
 <body style="background-color:Red">
 <h1 style="color:Blue">This is my homepage. These our my webpages.
-Check out <a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>.
+Check out <a href="http://swag0.github.io/Happyfaces.html">http://images.clipartpanda.com/laughing-smiley-face-gif-pictures-of-happy-face.gif</a>.
 Don't forget to check out all of <a href="http://swag0.github.io/spongebob&friends.html">Spongebob's Adventures</a>.
 </h1>
 </body>
