--- a/Cole.html
+++ b/Cole.html
@@ -3,8 +3,8 @@
 </title></head>
 <body style="background-color:Red">
 <h1 style="color:Blue">This is my homepage. These our my webpages.
-Check out <a href="http://swag0.github.io/Happyfaces.html"><img src="http://images.clipartpanda.com/laughing-smiley-face-gif-pictures-of-happy-face.gif"></a>.
-Don't forget to check out all of <a href="http://swag0.github.io/spongebob&friends.html">Spongebob's Adventures</a>.
+Check out <a href="http://swag0.github.io/Happyfaces.html"><img src="http://www.mudita.se/images/SmallSmileyFace.jpg"></a>.
+Don't forget to check out all of <a href="http://swag0.github.io/spongebob&friends.html"><img src="http://i.huffpost.com/gen/376430/thumbs/s-SPONGEBOB-SQUAREPANTS-small.jpg"></a>.
 </h1>
 </body>
 </html>
