--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -17,6 +17,6 @@
 <img src="https://s-media-cache-ak0.pinimg.com/originals/88/3d/d3/883dd31c9d60c837add248b0eebf09e9.gif">
 <img src="http://i39.tinypic.com/iyo46g.jpg">
 <img src="http://i59.photobucket.com/albums/g294/clgarcia0331/EternalGlee4.gif">
-<img src="http://i35.photobucket.com/albums/d186/IDubyaD/FlashingSmileyFace.gif">500" height="500">
+<img src="http://i35.photobucket.com/albums/d186/IDubyaD/FlashingSmileyFace.gif">
 </body>
 </html>
