--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -6,11 +6,11 @@
 </h1>
 <img src="http://piq.codeus.net/static/media/userpics/piq_180246_400x400.png">
 <img src="http://img1.wikia.nocookie.net/__cb20120412051836/suburgatory/images/5/52/Happy_face.jpg">
-<img src="http://i.ebayimg.com/images/i/290564811066-0-1/s-l1000.jpg">
+<img src="http://i.ebayimg.com/images/i/290564811066-0-1/s-l1000.jpg" alt"http://i.ebayimg.com/images/i/290564811066-0-1/s-l1000.jpg" width="700" height="500">
 <img src="http://ak-hdl.buzzfed.com/static/enhanced/webdr06/2013/6/13/14/anigif_enhanced-buzz-22067-1371148703-12.gif">
 <img src="https://kbunge.files.wordpress.com/2013/02/lotsa-smiley-faces1.jpg¨
 <img src="http://i.ytimg.com/vi/ReF6iQ7M5_A/maxresdefault.jpg">
-<img src="http://orig07.deviantart.net/2c43/f/2011/031/d/c/very_happy_face_by_zero78o-d38iw7i.jpg">
+<img src="http://orig07.deviantart.net/2c43/f/2011/031/d/c/very_happy_face_by_zero78o-d38iw7i.jpg" alt="http://orig07.deviantart.net/2c43/f/2011/031/d/c/very_happy_face_by_zero78o-d38iw7i.jpg" width="700" height="500">
 <img src="http://images.fineartamerica.com/images/artworkimages/mediumlarge/1/happy-face-and-bresrpalHappyface.svg.png">
 <img src="http://rs288.pbsrc.com/albums/ll198/14133/repeatingsmiley.gif~c200">
 <img src="http://stream1.gifsoup.com/view1/1322376/elephant-seals-fight-o.gif">
