--- a/gary.html
+++ b/gary.html
@@ -4,7 +4,7 @@
 <body style="background-color:pink">
 <h1 style="color:blue">Gary's Moments
 </h1>
-<img src="https://38.media.tumblr.com/177e0f205c5b246ada5f2ddf2656df96/tumblr_mwotvmKCW21qbaxlqo1_400.gif">
+<img src="http://vignette1.wikia.nocookie.net/nickfanon/images/e/e4/Gary-in-love-1.jpg/revision/latest?cb=20111216010659">
 <img src="http://vignette2.wikia.nocookie.net/ofibty/images/d/d9/If-only-i-could-see-you-one-more-time-so-i-can-tell-you-how-much-i-love-you-if-only-i-could-hear-you-meow-one-last-timee280a6-spongebob-to-gary.gif/revision/latest?cb=20130331163727">
 <img src="http://media.giphy.com/media/124uCM1WzUYDtu/giphy.gif">
 <img src="http://img2.wikia.nocookie.net/__cb20120810224452/theadventuresofgarythesnail/images/e/e3/Tumblr_lfaulbIiOx1qe1bxvo1_500.gif">
