--- a/spongebob&friends.html
+++ b/spongebob&friends.html
@@ -13,5 +13,7 @@ You won't regret looking at <a href="http://swag0.github.io/gary.html">Gary's Mo
 <img src="http://cdn1.theodysseyonline.com/files/2015/05/27/635682858558479225492110164_tumblr_leovrzu6ms1qaj5jro1_500.gif">
 <img src="http://i203.photobucket.com/albums/aa278/TheGrandHatching/tumblr_l5fg1eppEy1qa9xuy.gif">
 <img src="http://28.media.tumblr.com/tumblr_m1xats65OV1r0xydpo1_500.gif">
+<img src="http://img2.wikia.nocookie.net/__cb20120810224452/theadventuresofgarythesnail/images/e/e3/Tumblr_lfaulbIiOx1qe1bxvo1_500.gif">
+<img src="http://img4.wikia.nocookie.net/__cb20120810225239/theadventuresofgarythesnail/images/4/4a/Tumblr_lv6ez2yGOE1r5gykfo1_500_thumb.gif">
 </body>
 </html>
