--- a/spongebob&friends.html
+++ b/spongebob&friends.html
@@ -16,5 +16,7 @@ Look at <a href="http://swag0.github.io/mr%20krabs.html"><img src="http://img1.w
 <img src="http://28.media.tumblr.com/tumblr_m1xats65OV1r0xydpo1_500.gif">
 <img src="http://img2.wikia.nocookie.net/__cb20120810224452/theadventuresofgarythesnail/images/e/e3/Tumblr_lfaulbIiOx1qe1bxvo1_500.gif">
 <img src="http://img4.wikia.nocookie.net/__cb20120810225239/theadventuresofgarythesnail/images/4/4a/Tumblr_lv6ez2yGOE1r5gykfo1_500_thumb.gif">
+<img src="http://i481.photobucket.com/albums/rr180/rustybonesjones/SpongebobSandyCheeks3D-2.jpg">
+<img src="http://img3.wikia.nocookie.net/__cb20140523015420/spongebob/images/7/73/Spongebob-and-Mr-Krabs-Wallpaper.jpg" alt="http://img3.wikia.nocookie.net/__cb20140523015420/spongebob/images/7/73/Spongebob-and-Mr-Krabs-Wallpaper.jpg" width="500" height="300">
 </body>
 </html>
