--- a/coolgames.html
+++ b/coolgames.html
@@ -3,8 +3,10 @@
 </title></head>
 <body style="background-color:"Red">
 <h1 style="color:oceanblue">
-Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi"></a>.
-Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900"></a>.
+Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" alt="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" width="500 height="300"></a>.
+Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" alt="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" width="500" height="300">
+
+</a>.
 </h1>
 </body>
 </html>
