delete second duck

--- a/coolgames.html
+++ b/coolgames.html
@@ -1,9 +1,9 @@
 <html>
 <head><titleBest Games
 </title></head>
-<body style="background-color:"Red">
+<body style="background-color:"red">
 <h1 style="color:oceanblue">
-Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" alt="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" width="500 height="300"></a>.
+Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" alt="http://www.coolmath-games.com/0-duck-life" width="500 height="300"></a>.
 Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" alt="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" width="500" height="300">
 
 </a>.
