--- a/coolgames.html
+++ b/coolgames.html
@@ -5,7 +5,7 @@
 <h1 style="color:oceanblue">
 Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" alt="http://www.coolmath-games.com/0-duck-life" width="500 height="300"></a>.
 Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" alt="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" width="500" height="300">
-Bowman 2<a href="http://www.addictinggames.com/shooting-games/bowman2.jsp"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/28/arrow-150966_640.png"</a>
+Bowman 2<a href="http://www.addictinggames.com/shooting-games/bowman2.jsp"><img src="https://s-media-cache-ak0.pinimg.com/236x/d2/54/aa/d254aa986eb45015422cd7d3f371ca4e.jpg"</a>
 </a>.
 </h1>
 </body>
