--- a/GREEN.html
+++ b/GREEN.html
@@ -26,7 +26,7 @@
 <img src="http://rabble.ca/sites/rabble/files/node-images/gpc_gradient_logo_en.png">
 <h1 style="color:red">
 <p>So are you voting for Lexi? Tell us by pressing yes or no</p>
-<a href=""><img src="http://www.clker.com/cliparts/W/C/C/W/m/C/yes-button-md.png"></a>
+<a href="http://swag0.github.io/yes%20to%20green.html"><img src="http://www.clker.com/cliparts/W/C/C/W/m/C/yes-button-md.png"></a>
 <a href=""><img src="http://www.clker.com/cliparts/Y/q/x/l/T/b/no-button-md.png"></a>
 </body>
 </html>
