--- a/GREEN.html
+++ b/GREEN.html
@@ -25,7 +25,7 @@
 </h5>
 <img src="http://rabble.ca/sites/rabble/files/node-images/gpc_gradient_logo_en.png">
 <h1 style="color:red">
-<p>So are you voting for Lexi? Tell us by pressing yes or no</p>
+<p>So are you voting for Lexi? Tell us by voting in this poll</p>
 <script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9125834.js"></script>
 <noscript><a href="http://polldaddy.com/poll/9125834/">Are you voting for Lexi this year?</a></noscript>
 </body>
