--- a/GREEN.html
+++ b/GREEN.html
@@ -11,6 +11,7 @@
 <p>We will welcome more schools for sports meets</p>
 <p>We will make our country have more security</p>
 <p>Instead of a chromebook cart we will get an iMac cart</p>
+<p>Also, if we cut down trees we will plant them so that we can maintain clean air</p>
 <p>And much much more</p>
 </h1>
 <h1 style="color:khaki"> Why would you vote for<img src="http://cliparts.co/cliparts/rij/RBR/rijRBR6jT.png" alt="http://cliparts.co/cliparts/rij/RBR/rijRBR6jT.png" width="50" height="30">those parties since you know that...
@@ -18,7 +19,7 @@
 <h3 style="color:khaki">
 <p>Mr.Mulclair is a crazy.He mortgaged his house 9 whole times.Do you know how much money he lost?!If he can't manage his own money how can he manage your money?</p>
 <p>Mr.Trudeau says 'what does real change mean to you'. Well I know what it means to him! To him it means sit back, higher the taxes, and do nothing to help educate the students</p>
-<p>Lemonades cost FIVE dollars! Harper has probably taken a total of 100 dollars only this school year. Do you really want to lose your money and keep it that way? Well we don't think you do which is why you should vote for Lexi!</p>  
+<p>Lemonades cost FIVE dollars! Harper has probably taken a total of 100 dollars a per day just from overpriced lemonade. Do you really want to lose your money and keep it that way? Well we don't think you do which is why you should vote for Lexi!</p>  
 <h5 style="color:green">
 <p>Campaign Managers: Cole Berezny and Sahil Varshney</p>
 <p>Candidate: Lexi Dyer</p>
