--- a/GREEN.html
+++ b/GREEN.html
@@ -17,12 +17,12 @@
 <h1 style="color:khaki"> Why would you vote for<img src="http://cliparts.co/cliparts/rij/RBR/rijRBR6jT.png" alt="http://cliparts.co/cliparts/rij/RBR/rijRBR6jT.png" width="50" height="30">those parties since you know that...
 </h1>
 <h3 style="color:khaki">
-<p>Mr.Mulclair is a crazy.He mortgaged his house 9 whole times.Do you know how much money he lost?!If he can't manage his own money how can he manage your money?</p>
+<p>Mr.Mulclair is crazy.He mortgaged his house 9 whole times.Do you know how much money he lost?!If he can't manage his own money how can he manage your money?</p>
 <p>Mr.Trudeau says 'what does real change mean to you'. Well I know what it means to him! To him it means sit back, higher the taxes, and do nothing to help educate the students</p>
 <p>Lemonades cost FIVE dollars! Harper has probably taken a total of 100 dollars a per day just from overpriced lemonade. Do you really want to lose your money and keep it that way? Well we don't think you do which is why you should vote for Lexi!</p>  
 <h5 style="color:green">
-<p>Campaign Managers: Cole Berezny and Sahil Varshney</p>
-<p>Candidate: Lexi Dyer</p>
+<p>Campaign Managers:Cole and Sahil</p>
+<p>Candidate:Lexi</p>
 </h5>
 <img src="http://rabble.ca/sites/rabble/files/node-images/gpc_gradient_logo_en.png">
 <h1 style="color:red">
