--- a/GREEN.html
+++ b/GREEN.html
@@ -12,6 +12,7 @@
 <p>We will make our country have more security</p>
 <p>Instead of a chromebook cart we will get an iMac cart</p>
 <p>Also, if we cut down trees we will plant them so that we can maintain clean air</p>
+<p>We will make the soccer field a turf field</p>
 <p>And much much more</p>
 </h1>
 <h5 style="color:green">
