--- a/GREEN.html
+++ b/GREEN.html
@@ -15,7 +15,7 @@
 <p>We will make the soccer field a turf field</p>
 <p>And much much more</p>
 </h1>
-<h5 style="color:green">
+<h5 style="color:black">
 <p>Campaign Managers:Cole and Sahil</p>
 <p>Candidate:Lexi</p>
 </h5>
