--- a/poll5sm.html
+++ b/poll5sm.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Vote for 5KM
 </title></head>
-<body>
+<body style="background-color:blue">
 <h1 style="color:red">
 <p>Hello. If you are in 5SM please can you vote for who you want to win the electiom</p>
 <script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9127493.js"></script>
