--- a/poll5SM W.html
+++ b/poll5SM W.html
@@ -3,7 +3,7 @@
 </title></head>
 <body style="background-color:blue">
 <h1 style="color:red">
-<p>Hello. If you are in 5SM West please can you vote for who you want to win the electiom</p>
+<p>Hello. If you are in 5SM West please can you vote for who you want to win the election</p>
 <script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9127493.js"></script>
 <noscript><a href="http://polldaddy.com/poll/9127493/">Who do you want to win the election for 5SM West</a></noscript>
 </h1>
