add background music

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 Check out my happy faces<img src="http://www.wpclipart.com/signs_symbol/arrows/BW_arrows/outline_arrows/arrow_small-outline_right.png"><a href="http://swag0.github.io/Happyfaces.html"><img src="http://www.mudita.se/images/SmallSmileyFace.jpg"></a>.
 Don't forget to check out spongebobs website<img src="http://www.wpclipart.com/signs_symbol/arrows/BW_arrows/outline_arrows/arrow_small-outline_right.png"><a href="http://swag0.github.io/spongebob&friends.html"><img src="http://i.huffpost.com/gen/376430/thumbs/s-SPONGEBOB-SQUAREPANTS-small.jpg"></a>.
 Check out some cool<a href="http://swag0.github.io/coolgames.html"><img src="http://public.hudl.com/assets/519f80928ad7ca6daf0008bb/right/xbox.png" alt=http://public.hudl.com/assets/519f80928ad7ca6daf0008bb/right/xbox.png" width="75" height="75"></a>
+<embed src="mario theme song.mp4" autostart="true" loop="true"
+width="2" height="0">
+</embed>
 </h1>
 </body>
 </html>
