--- a/poll5SM E.html
+++ b/poll5SM E.html
@@ -8,4 +8,4 @@
 <noscript><a href="http://polldaddy.com/poll/9127509/">Who do you want to win the election for 5SM East</a></noscript>
 </h1>
 </body>
-</html
+</html>
