--- a/poll5SE S.html
+++ b/poll5SE S.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Who are you going to vote for in 5SE South?
 </title></head>
-<body style=¨background-color:blue¨
-<h1 style=¨color:red¨>Hello. If you are in 5SE South please can you vote for who you want to win the election
+<body style=“background-color:blue“
+<h1 style=“color:red“>Hello. If you are in 5SE South please can you vote for who you want to win the election
 <script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9128787.js"></script>
 <noscript><a href="http://polldaddy.com/poll/9128787/">Who are you going to vote for? 5SE S</a></noscript>
 </h1>
