--- a/mr.snuggles.html
+++ b/mr.snuggles.html
@@ -3,8 +3,7 @@
 </title></head>
 <body style="background-color:red">
 <h1 style="color:blue">
-<p><img src="file:///private/var/folders/1g/150lbj512qbghzlpw_4lf9w80000gn/T/com.apple.iChat/Messages/Transfers/Screen%20Shot%202015-10-15%20at%206.40.07%20PM.png"></p>
-<p>Mr.Snuggles lives another day</p><p>But can he survive another?</p><p> An evil Jaffrey is after him, and you know how ruthless Jeffrey's are.</p>
+<p>Mr.Snuggles lives another day</p><p>But can he survive another?</p><p> An evil Jeffrey is after him, and you know how ruthless Jeffrey's are.</p>
 <p>
 </h1>
 </body>
