--- a/GREEN.html
+++ b/GREEN.html
@@ -3,8 +3,8 @@
 </title></head>
 <body style="background-color:Blue">
 <img src="http://rabble.ca/sites/rabble/files/node-images/gpc_gradient_logo_en.png">
-<h1 style="color:limegreen">Vote for Lexi. Vote for a better future
-<p>If you vote for Lexi this is what we'll do</p>
+<h1 style="color:limegreen">Vote for Sahil. Vote for a better future
+<p>If you vote for Sahil this is what we'll do</p>
 <p>We will lower hot lunch prices</p>
 <p>We will do more fundraisers to get better education</p>
 <p>We will get more field trips</p>
@@ -16,12 +16,12 @@
 <p>And much much more</p>
 </h1>
 <h5 style="color:black">
-<p>Campaign Managers:Cole and Sahil</p>
-<p>Candidate:Lexi</p>
+<p>Campaign Managers:Cole and Lexi</p>
+<p>Candidate:Sahil</p>
 </h5>
 <img src="http://rabble.ca/sites/rabble/files/node-images/gpc_gradient_logo_en.png">
 <h1 style="color:red">
-<p>So are you voting for Lexi? Tell us by voting in this poll</p>
+<p>So are you voting for Sahil? Tell us by voting in this poll</p>
 <script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9125834.js"></script>
 <noscript><a href="http://polldaddy.com/poll/9125834/">Are you voting for Lexi this year?</a></noscript>
 </body>
