--- a/coolgames.html
+++ b/coolgames.html
@@ -7,6 +7,7 @@ Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://pla
 Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" alt="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" width="500" height="300">
 Bowman 2<a href="http://www.addictinggames.com/shooting-games/bowman2.jsp"><img src="https://s-media-cache-ak0.pinimg.com/236x/d2/54/aa/d254aa986eb45015422cd7d3f371ca4e.jpg"</a>
 Sumo<a href="http://www.twoplayergames.org/play/82-Sumos.html"><img src="http://resources3.news.com.au/images/2012/11/01/1226507/978091-sumo.jpg"></a>
+Bad Ice Cream 3<a href="http://www.nitrome.com/games/badicecream3/#.ViKWlxCrTq0"><img src="http://i.ytimg.com/vi/e27ot-n5MmQ/hqdefault.jpg"></a>
 </h1>
 </body>
 </html>
