--- a/coolgames.html
+++ b/coolgames.html
@@ -1,8 +1,8 @@
 <html>
 <head><titleBest Games
 </title></head>
-<body style="background-color:"red">
-<h1 style="color:oceanblue">
+<body style="background-color:red">
+<h1 style="color:blue">
 <p>Ducklife<a href="http://www.coolmath-games.com/0-duck-life"><img src="http://play.typepad.com/.a/6a0128764db9b7970c013110041cca970c-pi" alt="http://www.coolmath-games.com/0-duck-life" width="500 height="300"></a></p>
 <p>Agar.io<a href="http://agar.io/"><img src="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" alt="https://lh3.googleusercontent.com/O79n3WlPqVEd88IZupxnBX3rYAiHCaBR7ozb9cgoz3S6SihPzMH8qo0rLWoEYXpYc6M=h900" width="500" height="300"></p>
 <p>Bowman 2<a href="http://www.addictinggames.com/shooting-games/bowman2.jsp"><img src="https://s-media-cache-ak0.pinimg.com/236x/d2/54/aa/d254aa986eb45015422cd7d3f371ca4e.jpg"</a></p>
