try to add music

--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -19,5 +19,7 @@
 <img src="http://i59.photobucket.com/albums/g294/clgarcia0331/EternalGlee4.gif">
 <img src="http://i35.photobucket.com/albums/d186/IDubyaD/FlashingSmileyFace.gif">
 <img src="https://positivityworks.files.wordpress.com/2009/11/happy.jpg" alt="https://positivityworks.files.wordpress.com/2009/11/happy.jpg" width="700" height="500">
+<embed src="https://www.freesound.org/people/zShwagg/sounds/152316/#comments" autostart="true" loop="true" hidden="true">
+</embed>
 </body>
 </html>
