--- a/coolgames.html
+++ b/coolgames.html
@@ -12,6 +12,8 @@ Bad Ice Cream 3<a href="http://www.nitrome.com/games/badicecream3/#.ViKWlxCrTq0"
 Worlds Hardest Game<a href="http://www.coolmath-games.com/0-worlds-hardest-game"><img src="http://gogames.biz/games/images/the-worlds-hardest-game-screen.jpg" alt="http://gogames.biz/games/images/the-worlds-hardest-game-screen.jpg" width="100" height="100"></a>
 <p><script type="text/javascript" charset="utf-8" src="http://static.polldaddy.com/p/9142500.js"></script>
 <noscript><a href="http://polldaddy.com/poll/9142500/">Which one is your favorite game?</a></noscript></p>
+<embed src="https://www.freesound.org/people/zShwagg/sounds/152316/#comments" autostart="true" loop="true" hidden="true">
+</embed>
 </h1>
 </body>
 </html>
