--- a/Link.html
+++ b/Link.html
@@ -29,7 +29,7 @@ div{
 		</style
 		<title></title>
 	</head>
-	<body style="color:blue">
+	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
 		<p>It's Cole's website.I'm here to help you have fun.</p><br/><br/>
 		<div>
