--- a/Link.html
+++ b/Link.html
@@ -31,7 +31,7 @@ div{
 	</head>
 	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
-		<p>It's Cole's website.I'm here to help you have fun.</p><br/><br/>
+		<p>It's Cole.Check out my website below.</p><br/><br/>
 		<div>
 			<a href="http://swag0.github.io/">This is my button</a>
 		</div>
