--- a/Link.html
+++ b/Link.html
@@ -27,7 +27,7 @@ div{
     color:#00e5ee;
     font-family:Verdana
 		</style
-		<title></title>
+		<title>Link to Cole's Site</title>
 	</head>
 	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
