--- a/Link.html
+++ b/Link.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head>Lin to Cole's Website
 		<style>
 		img {
 	display: block;
@@ -27,7 +27,7 @@ div{
     color:#00e5ee;
     font-family:Verdana
 		</style
-		<title>Link to Cole's Site</title>
+		<title></title>
 	</head>
 	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
