--- a/Link.html
+++ b/Link.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head><title>My Homepage</title></head>
 		<style>
-		img {
-	display: block;
-	height: 200px;
-	width: 300px;
-	margin: auto;
-}
 
 p {
 	text-align: center;
@@ -25,15 +19,49 @@ div{
     text-align:center;
     text-decoration:none;
     color:#00e5ee;
-    font-family:Verdana
-		</style
-		<title></title>
-	</head>
+    font-family:cursive;
+}
+Sponge{
+    height:50px;
+    width:120px;
+    border-color:#6495ED;
+    background-color:yellow;
+    border-radius:5px;
+    margin:auto;
+    text-align:center;
+    text-decoration:none;
+    color:#00e5ee;
+    font-family:cursive;
+}
+Games{
+    height:50px;
+    width:120px;
+    border-color:#6495ED;
+    background-color:green;
+    border-radius:5px;
+    margin:auto;
+    text-align:center;
+    text-decoration:none;
+    color:#00e5ee;
+    font-family:cursive;
+}
+</style>
+    
+    
+
+
+		
 	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
 		<p>It's Cole.Check out my website below.</p><br/><br/>
-		<div>
-			<a href="http://swag0.github.io/">This is my button</a>
-		</div>
+		<p><div>
+			<a href="http://swag0.github.io/Happyfaces.html">This is my link to Happy Faces</a>
+		</div></p>
+	<p>	<Sponge>
+		<a href="http://swag0.github.io/spongebob&friends.html">This is my link to Spongebob</a>
+		</Sponge></p>
+		<p><Games>
+		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
+		</Games></p>
 	</body>
 </html>
