--- a/CB.html
+++ b/CB.html
@@ -53,7 +53,7 @@ Games{
 		
 	<body style="background-color:blue">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
-		<p>It's Cole.Check out my website below.</p><br/><br/>
+		<p>It's Cole.Check out my websites below.</p><br/><br/>
 		<p><div>
 			<a href="http://swag0.github.io/Happyfaces.html">This is my link to Happy Faces</a>
 		</div></p>
