--- a/CB.html
+++ b/CB.html
@@ -3,10 +3,12 @@
 	<head><title>My Homepage</title></head>
 		<style>
 
+
 p {
 	text-align: center;
 	font-family: Garamond, serif;
-	font-size: 18px;
+	font-size: 25px;
+	color:#40E0D0;
 }
 
 div{
