--- a/CB.html
+++ b/CB.html
@@ -15,7 +15,7 @@ div{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:red;
+    background-color:00ffff;
     border-radius:5px;
     margin:auto;
     text-align:center;
@@ -27,7 +27,7 @@ Sponge{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:yellow;
+    background-color:#40E0D0;
     border-radius:5px;
     margin:auto;
     text-align:center;
@@ -39,7 +39,7 @@ Games{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:green;
+    background-color:#ff00ff;
     border-radius:5px;
     margin:auto;
     text-align:center;
