--- a/CB.html
+++ b/CB.html
@@ -53,7 +53,7 @@ Games{
 
 
 		
-	<body style="background-color:blue">
+	<body style="background-color:red">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
 		<p>It's Cole.Check out my websites below.</p><br/><br/>
 		<p><div>
