--- a/CB.html
+++ b/CB.html
@@ -15,7 +15,7 @@ div{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:00ffff;
+    background-color:800080;
     border-radius:5px;
     margin:auto;
     text-align:center;
