--- a/CB.html
+++ b/CB.html
@@ -65,5 +65,6 @@ Games{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+		purple?
 	</body>
 </html>
