--- a/CB.html
+++ b/CB.html
@@ -15,7 +15,7 @@ div{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:800080;
+    background-color:#800080;
     border-radius:5px;
     margin:auto;
     text-align:center;
@@ -65,6 +65,6 @@ Games{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
-		purple?
+
 	</body>
 </html>
