--- a/CB.html
+++ b/CB.html
@@ -20,7 +20,7 @@ div{
     margin:auto;
     text-align:center;
     text-decoration:none;
-    color:#00e5ee;
+    color:#ffb90f;
     font-family:cursive;
 }
 Sponge{
