--- a/CB.html
+++ b/CB.html
@@ -15,12 +15,12 @@ div{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:#800080;
+    background-color:#ffb90f;
     border-radius:5px;
     margin:auto;
     text-align:center;
     text-decoration:none;
-    color:#ffb90f;
+    color:#800080;
     font-family:cursive;
 }
 Sponge{
