--- a/CB.html
+++ b/CB.html
@@ -2,6 +2,9 @@
 <html>
 	<head><title>My Homepage</title></head>
 		<style>
+img{
+			text-align:center;	
+}
 
 
 p {
@@ -47,7 +50,13 @@ Games{
     color:#00e5ee;
     font-family:cursive;
 }
+img{
+    margin-left: 250px;
+    margin-right: 250px;
+    width: 15em
+}
 </style>
+
     
     
 
@@ -65,6 +74,6 @@ Games{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
-
+qwjkopa
 	</body>
 </html>
