--- a/CB.html
+++ b/CB.html
@@ -47,8 +47,8 @@ Games{
     font-family:cursive;
 }
 img{
-    margin-left: 675px;
-    margin-right: 675px;
+    margin-left:16.5em;
+    margin-right:16.5em;
     width: 15em
 }
 </style>
