--- a/CB.html
+++ b/CB.html
@@ -47,8 +47,8 @@ Games{
     font-family:cursive;
 }
 img{
-    margin-left:16.5em;
-    margin-right:16.5em;
+    margin-left:33em;
+    margin-right:33em;
     width: 15em
 }
 </style>
@@ -70,5 +70,6 @@ img{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+		lets hope
 	</body>
 </html>
