add backup fonts

--- a/CB.html
+++ b/CB.html
@@ -5,7 +5,7 @@
 
 p {
 	text-align: center;
-	font-family: Garamond, serif;
+	font-family: verdana, Garamond, serif;
 	font-size: 25px;
 	color:#40E0D0;
 }
@@ -20,7 +20,7 @@ div{
     text-align:center;
     text-decoration:none;
     color:#800080;
-    font-family:cursive;
+    font-family:cursive,verdana,times;
 }
 Sponge{
     height:50px;
@@ -32,7 +32,7 @@ Sponge{
     text-align:center;
     text-decoration:none;
     color:#00e5ee;
-    font-family:cursive;
+    font-family:cursive,verdana,times;
 }
 Games{
     height:50px;
@@ -44,7 +44,7 @@ Games{
     text-align:center;
     text-decoration:none;
     color:#00e5ee;
-    font-family:cursive;
+    font-family:cursive,verdana,times;
 }
 img{
     margin-left:36.5em;
