--- a/School/Subjects.html
+++ b/School/Subjects.html
@@ -3,7 +3,7 @@
 School
 </title></head>
 <body style="color:red">
-    test
+purplepizzafish
 <div class="tabs">
     
 <div class="tab">
@@ -64,7 +64,7 @@ color:blue;
 }
 .tabs {
   position: relative;   
-  min-height: 200px; /* This part sucks */
+  min-height: 1000px; /* This part sucks */
   clear: both;
   margin: 25px 0;
 color:red;
