--- a/CB.html
+++ b/CB.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html><!--Get a Favicon at favicon.cc-->
 	<head><title>My Homepage</title></head>
 		<style>
+		
 
 p {
 	text-align: center;
