--- a/CB.html
+++ b/CB.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><!--Get a Favicon at favicon.cc-->
-	<head><title>My Homepage</title></head>
+	<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>My Homepage</title></head>
 		<style>
 		
 
@@ -71,6 +72,7 @@ img{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+		icon check
 		
 	</body>
 </html>
