--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -1,7 +1,7 @@
 <html>
-<head><link rel="icon" type="image/icon"
-     href="http://i288.photobucket.com/albums/ll198/14133/repeatingsmiley.gif" /<title>Happy Faces
-</title></head>
+<head><link rel="icon" type="image/gif"
+     href="http://i288.photobucket.com/albums/ll198/14133/repeatingsmiley.gif" /><title>
+Happy Faces</title></head>
 <body style="background-color:purple">
 <h1 style="color:limegreen">Happy faces are awesome and cool.:)
 </h1>
@@ -20,6 +20,5 @@
 <img src="http://i59.photobucket.com/albums/g294/clgarcia0331/EternalGlee4.gif">
 <img src="http://i35.photobucket.com/albums/d186/IDubyaD/FlashingSmileyFace.gif">
 <img src="https://positivityworks.files.wordpress.com/2009/11/happy.jpg" alt="https://positivityworks.files.wordpress.com/2009/11/happy.jpg" width="700" height="500">
-
-icon check</body>
+</body>
 </html>
