--- a/Happyfaces.html
+++ b/Happyfaces.html
@@ -1,6 +1,6 @@
 <html>
-<head><link rel="icon" type="image/gif"
-     href="http://i288.photobucket.com/albums/ll198/14133/repeatingsmiley.gif" /><title>
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>
 Happy Faces</title></head>
 <body style="background-color:purple">
 <h1 style="color:limegreen">Happy faces are awesome and cool.:)
