--- a/coolgames.html
+++ b/coolgames.html
@@ -1,5 +1,6 @@
 <html>
-<head><titleBest Games
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><titleBest Games
 </title></head>
 <body style="background-color:red">
 <h1 style="color:blue">
