--- a/gary.html
+++ b/gary.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Gary
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Gary
 </title></head>
 <body style="background-color:pink">
 <h1 style="color:blue">Gary's Moments
