--- a/mr krabs.html
+++ b/mr krabs.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Mr. Krabs
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Mr. Krabs
 </title></head>
 <body style="background-color:red">
 <h1 style="color:gold">Mr. Krabs
