--- a/patrick.html
+++ b/patrick.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Patrick
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Patrick
 </title></head>
 <body style="background-color:aquamarine">
 <h1 style="color:blue">Patrick's Moments
