--- a/pusheen.html
+++ b/pusheen.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Pusheen
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Pusheen
 </title></head>
 <body style="background-color:red">
 <h1 style="color:blue">
