--- a/sandy.html
+++ b/sandy.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Sandy
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /> <title>Sandy
 </title></head>
 <body style="background-color:brown">
 <h1 style="color:green">Sandy's Moments
