--- a/spongebob&friends.html
+++ b/spongebob&friends.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Spongebobfriends
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Spongebobfriends
 </title></head>
 <body style="background-color:Yellow">
 <h1 style="color:Pink">
