--- a/spongebob.html
+++ b/spongebob.html
@@ -1,5 +1,6 @@
 <html>
-<head><title>Spongebob
+<head><link rel="icon" type="image/icon"
+     href="https://raw.githubusercontent.com/Swag0/Swag0.github.io-master/master/favicon.ico" /><title>Spongebob
 </title></head>
 <body style="background-color:yellow">
 <h1 style="color:green">Spongebob's Moments
