--- a/CB.html
+++ b/CB.html
@@ -53,6 +53,24 @@ img{
     margin-right:36.5em;
     width: 15em
 }
+Pusheen{
+    height:50px;
+    width:120px;
+    border-color:#6495ED;
+    background-color:black;
+    border-radius:5px;
+    margin:auto;
+    text-align:center;
+    text-decoration:none;
+    color:#00e5ee;
+    font-family:cursive,verdana,times;
+}
+img{
+    margin-left:36.5em;
+    margin-right:36.5em;
+    width: 15em
+}
+
 </style>
 
     
@@ -62,7 +80,7 @@ img{
 		
 	<body style="background-color:red">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
-		<p>It's Cole.Check out my websites below.</p><br/><br/>
+		<p>It's Cole. Check out my websites below.</p><br/><br/>
 		<p><div>
 			<a href="http://swag0.github.io/Happyfaces.html">This is my link to Happy Faces</a>
 		</div></p>
@@ -72,6 +90,9 @@ img{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+	<p><Pusheen>
+                <a href="http://swag0.github.io/pusheen.html">This is a link to Pusheen</a>
+	</Pusheen></p>
 	
 		
 	</body>
