--- a/CB.html
+++ b/CB.html
@@ -93,6 +93,7 @@ img{
 	<p><Pusheen>
                 <a href="http://swag0.github.io/pusheen.html">This is a link to Pusheen</a>
 	</Pusheen></p>
+	Pussheen
 	
 		
 	</body>
