add pusheen images

--- a/pusheen.html
+++ b/pusheen.html
@@ -23,5 +23,9 @@ Look at Pusheen!
 <img src="http://38.media.tumblr.com/tumblr_lkqkraG6741qhy6c9o1_400.gif" alt="http://38.media.tumblr.com/tumblr_lkqkraG6741qhy6c9o1_400.gif" width="200" height="200">
 <img src="http://media.giphy.com/media/lN1vGXPDNxA08/giphy.gif" alt="http://media.giphy.com/media/lN1vGXPDNxA08/giphy.gif" width="200" height="200">
 <img src="http://38.media.tumblr.com/c97cf1e24d6a255f3fdb4fa329d95dc7/tumblr_mgab3shIl31qhy6c9o8_400.gif" alt="http://38.media.tumblr.com/c97cf1e24d6a255f3fdb4fa329d95dc7/tumblr_mgab3shIl31qhy6c9o8_400.gif" width="200" height="200">
+<img src="http://33.media.tumblr.com/tumblr_lzkpw7DAl21qhy6c9o5_400.gif" alt="http://33.media.tumblr.com/tumblr_lzkpw7DAl21qhy6c9o5_400.gif" width="200" height="200">
+<img src="http://31.media.tumblr.com/tumblr_ljrc15JfS41qhy6c9o1_400.gif" alt="http://31.media.tumblr.com/tumblr_ljrc15JfS41qhy6c9o1_400.gif" width="200" height="200">
+<img src="http://31.media.tumblr.com/tumblr_m8py4ylC1r1qhy6c9o1_400.gif" alt="http://31.media.tumblr.com/tumblr_m8py4ylC1r1qhy6c9o1_400.gif" width="200" height="200">
+<img src="https://frameyourfuture.files.wordpress.com/2015/04/b9ed022a9cd256e18bb1fbca5046495e.gif?w=300&h=300" alt="https://frameyourfuture.files.wordpress.com/2015/04/b9ed022a9cd256e18bb1fbca5046495e.gif?w=300&h=300" width="200" height="200">
 </body>
 </html>
