--- a/pusheen.html
+++ b/pusheen.html
@@ -27,5 +27,8 @@ Look at Pusheen!
 <img src="http://31.media.tumblr.com/tumblr_ljrc15JfS41qhy6c9o1_400.gif" alt="http://31.media.tumblr.com/tumblr_ljrc15JfS41qhy6c9o1_400.gif" width="200" height="200">
 <img src="http://31.media.tumblr.com/tumblr_m8py4ylC1r1qhy6c9o1_400.gif" alt="http://31.media.tumblr.com/tumblr_m8py4ylC1r1qhy6c9o1_400.gif" width="200" height="200">
 <img src="https://frameyourfuture.files.wordpress.com/2015/04/b9ed022a9cd256e18bb1fbca5046495e.gif?w=300&h=300" alt="https://frameyourfuture.files.wordpress.com/2015/04/b9ed022a9cd256e18bb1fbca5046495e.gif?w=300&h=300" width="200" height="200">
+<img src="http://33.media.tumblr.com/bc243c440636ef8217ae784d14e01444/tumblr_nsktwmmPYl1qhy6c9o2_r1_540.gif" alt="http://33.media.tumblr.com/bc243c440636ef8217ae784d14e01444/tumblr_nsktwmmPYl1qhy6c9o2_r1_540.gif" width="200" height="200">
+<img src="http://45.media.tumblr.com/33c1948d66e74a6273e0a7166e12f6f6/tumblr_nund0j8X3u1qhy6c9o1_r4_1280.gif" alt="http://45.media.tumblr.com/33c1948d66e74a6273e0a7166e12f6f6/tumblr_nund0j8X3u1qhy6c9o1_r4_1280.gif" width="200" height="200">
+<img src="http://31.media.tumblr.com/7ebdf40b9435a61f1a77d9100239ed22/tumblr_nbgeflEQMl1skst1yo3_250.gif" alt="http://31.media.tumblr.com/7ebdf40b9435a61f1a77d9100239ed22/tumblr_nbgeflEQMl1skst1yo3_250.gif" width="200" height="200">
 </body>
 </html>
