--- a/CB.html
+++ b/CB.html
@@ -70,7 +70,17 @@ img{
     margin-right:36.5em;
     width: 15em
 }
-
+Homework{
+    height:50px;
+    width:120px;
+    border-color:#6495ED;
+    background-color:white;
+    border-radius:5px;
+    margin:auto;
+    text-align:center;
+    text-decoration:none;
+    color:#00e5ee;
+    font-family:cursive,verdana,times;
 </style>
 
     
@@ -93,6 +103,9 @@ img{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+		<p><Homework>
+		<a href="https://d157rqmxrxj6ey.cloudfront.net/swag0/20583">These are some cool excuses</a>
+		</Homework></p>
 
 
 	
