--- a/School/Subjects.html
+++ b/School/Subjects.html
@@ -111,6 +111,7 @@
         <ul>
           <li><a href='http://swag0.github.io/School/FoodSecurity.html'>Food Security</a></li>
           <li><a href='http://swag0.github.io/School/Vancouver311.html'>Vancouver 311</a></li>
+          <li><a href='http://swag0.github.io/School/Tech.html'>Technology</a></li>
       
             </ul>
           <li><a class='submenucol' href='#'>Math</a>
