--- a/School/Subjects.html
+++ b/School/Subjects.html
@@ -112,6 +112,7 @@
           <li><a href='http://swag0.github.io/School/FoodSecurity.html'>Food Security</a></li>
           <li><a href='http://swag0.github.io/School/Vancouver311.html'>Vancouver 311</a></li>
           <li><a href='http://swag0.github.io/School/Tech.html'>Technology</a></li>
+          <li><a href='Swag0.github.io/School/map.html'>Parks In B.C</a></li>
       
             </ul>
           <li><a class='submenucol' href='#'>Math</a>
