--- a/CB.html
+++ b/CB.html
@@ -99,7 +99,7 @@ Homework{
                 <a href="http://swag0.github.io/pusheen.html">This is a link to Pusheen</a>
 	</Pusheen></p>
 	<p><Homework>
-		<a href="https://d157rqmxrxj6ey.cloudfront.net/swag0/20585">These are some cool excuses</a>
+		<a href="https://thimbleprojects.org/swag0/188061">These are some cool excuses</a>
 		</Homework></p>
 	<p>	<Sponge>
 		<a href="http://swag0.github.io/spongebob&friends.html">This is my link to Spongebob</a>
@@ -107,6 +107,8 @@ Homework{
 		<p><Games>
 		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
 		</Games></p>
+	
+	web
 	
 
 
