--- a/CB.html
+++ b/CB.html
@@ -81,6 +81,19 @@ Homework{
     text-decoration:none;
     color:#00e5ee;
     font-family:cursive,verdana,times;
+			}
+Storytime{
+    height:50px;
+    width:120px;
+    border-color:#6495ED;
+    background-color:blue;
+    border-radius:5px;
+    margin:auto;
+    text-align:center;
+    text-decoration:none;
+    color:#00e5ee;
+    font-family:cursive,verdana,times;
+			}
 </style>
 
     
@@ -92,21 +105,24 @@ Homework{
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
 		<p>It's Cole. Check out my websites below.</p><br/><br/>
 		<p><div>
-			<a href="http://swag0.github.io/Happyfaces.html">This is my link to Happy Faces</a>
+			<a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>
 		</div></p>
 	
 		<p><Pusheen>
-                <a href="http://swag0.github.io/pusheen.html">This is a link to Pusheen</a>
+                <a href="http://swag0.github.io/pusheen.html">Pusheen</a>
 	</Pusheen></p>
 	<p><Homework>
-		<a href="https://thimbleprojects.org/swag0/188065">These are some cool excuses</a>
+		<a href="https://thimbleprojects.org/swag0/188065">Forgot Your Homework?</a>
 		</Homework></p>
 	<p>	<Sponge>
-		<a href="http://swag0.github.io/spongebob&friends.html">This is my link to Spongebob</a>
+		<a href="http://swag0.github.io/spongebob&friends.html">Spongebob SquarePants</a>
 		</Sponge></p>
 		<p><Games>
-		<a href="http://swag0.github.io/coolgames.html">This is my link to my favorite games</a>
+		<a href="http://swag0.github.io/coolgames.html">Awesome Games!</a>
 		</Games></p>
+	<p>	<Storytime>
+		<a href="https://thimbleprojects.org/swag00/190844/">Story Time!</a>
+		</Storytime></p>
 	
 
 
