--- a/CB.html
+++ b/CB.html
@@ -86,7 +86,7 @@ Storytime{
     height:50px;
     width:120px;
     border-color:#6495ED;
-    background-color:blue;
+    background-color:green;
     border-radius:5px;
     margin:auto;
     text-align:center;
