--- a/CB.html
+++ b/CB.html
@@ -49,8 +49,7 @@ Games{
     font-family:cursive,verdana,times;
 }
 img{
-    margin-left:36.5em;
-    margin-right:36.5em;
+    margin:auto
     width: 15em
 }
 Pusheen{
@@ -126,7 +125,7 @@ Storytime{
 	
 
 
-	
+	tro
 		
 	</body>
 </html>
