--- a/CB.html
+++ b/CB.html
@@ -120,7 +120,7 @@ Storytime{
 		<a href="http://swag0.github.io/coolgames.html">Awesome Games!</a>
 		</Games></p>
 	<p>	<Storytime>
-		<a href="https://thimbleprojects.org/swag00/190879">Story Time!</a>
+		<a href="https://thimbleprojects.org/swag00/190965/">Story Time!</a>
 		</Storytime></p>
 	
 
